kube/argo-ingress.yaml
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
##  annotations:
##    kubernetes.io/ingress.class: nginx
##    nginx.ingress.kubernetes.io/proxy-connect-timeout: 60s
##    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
#  labels:
#    app: argo-service
#  name: argo-service
#  namespace: argo
#spec:
#  ingressClassName: nginx
#  rules:
#    - host: argo.localho.st
#      http:
#        paths:
#          - backend:
#              service:
#                name: argo-service
#                port:
#                  name: web
#            path: /
#            pathType: ImplementationSpecific
#
#  tls:
#    - hosts:
#        - argo.localho.st
#
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-2-server
  annotations:
    # https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/annotations/
    ingress.kubernetes.io/proxy-body-size: 100M
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/app-root: "/"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  tls:
    - hosts:
        - workflows.apps.argoproj.io
      secretName: argo-workflows-secret
  rules:
    - host: workflows.apps.argoproj.io
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: argo-server
                port:
                  number: 2746
